--- a/AL_PushButton/library.properties
+++ b/AL_PushButton/library.properties
@@ -4,6 +4,6 @@ author=Anders Liu
 maintainer=Anders Liu
 sentence=An Arduino push button library.
 paragraph=A push button library with anti-vibration, no delay.
-category=Button
+category=Signal Input/Output
 url=https://github.com/anders-liu/arduino-libs/tree/master/AL_PushButton
 architectures=*
